<resources>
    <string name="app_name">See A Spark</string>
    <string name="app_id">1436825226428892</string>
    <string name="facebook_app_id">342648816260897</string>
    <string name="fb_login_protocol_scheme">fb342648816260897</string>
    <string name="cannot_connect_server">Cannot connect to server</string>
    <string name="error_api">Something went wrong!</string>
    <string name="internet">Internet connection not available!</string>
    <string name="success">200</string>
    <string name="invalid_access_token_code">420</string>
    <string name="treminate_account_code">405</string>
    <string name="ok_ngot_it">OK\nGot it</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</string>
    <string name="welcome_to">Welcome to</string>
    <string name="mentee">Mentee</string>
    <string name="mentor">Mentor</string>
    <string name="done">Done</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="reset">Reset</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email_below_to_receive_your_reset_password_instruction">Enter your email below to receive your reset password instruction</string>
    <string name="select_your_n_avatar">Select your Avatar</string>
    <string name="enter">Enter</string>
    <string name="search_your_occupation">Search your occupation</string>
    <string name="search_your_language">Search your language</string>
    <string name="name">Name</string>
    <string name="next">NEXT</string>
    <string name="what_is_your_name">What is your Name?</string>
    <string name="what_is_your_email">What is your\nEmail?</string>
    <string name="what_is_your_age">What is your Age?</string>
    <string name="what_is_your_profession">What is your Occupation?</string>
    <string name="what_language_speak">Select language(s) spoken</string>
    <string name="select">Select</string>
    <string name="select_your_gender">Select your Gender</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="years">Year(s)</string>
    <string name="months">Month(s)</string>
    <string name="select_your_experience">Select duration of experience</string>
    <string name="select_your_nskills">Select your Skills</string>
    <string name="transition">transition</string>
    <string name="transition_image">transitionImage</string>
    <string name="add_skills">Add Skills</string>
    <string name="enter_skill">Enter Skill</string>
    <string name="write_your_short_bio">Write a short biography</string>
    <string name="_320_characters">320 Characters Left</string>
    <string name="_1024_characters">1024 Characters Left</string>
    <string name="describe_your_profession">Describe your Occupation</string>
    <string name="verify_your_id">Verify your Id</string>
    <string name="questionnaires">Questionnaires</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="picture_taken">Picture taken</string>
    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="distance">Distance</string>
    <string name="gender">Gender</string>
    <string name="experience">Experience</string>
    <string name="select_preferred_skills">Select Preferred\nSkills</string>
    <string name="professions">Occupations</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_valid_email">Please enter a valid email</string>
    <string name="enter_password">Please enter valid password</string>
    <string name="error_password">Password must have minimum 8 characters</string>
    <string name="error_age">Please specify Age</string>
    <string name="error_skills">Please specify Skills</string>
    <string name="error_gender">Please specify Gender</string>
    <string name="error_bio">Please enter Bio</string>
    <string name="error_name">Please enter Name with minimum 2 characters.</string>
    <string name="error_profession">Please select or add Occupation</string>
    <string name="error_Language">Please specify Language</string>
    <string name="logout">Log out</string>
    <string name="your_profile_is_now_complete_and_is_under_review_will_let_you_know_know_shortly">Your profile is now complete and is under review. Will let you know shortly.</string>
    <string name="ready">Ready</string>
    <string name="disclamier">Disclamier</string>
    <string name="we_need_to_know_your_preferences_regarding_how_would_you_like_to_hear_from_us">We need to know your preferences regarding how would you like to hear from us.</string>
    <string name="skip">SKIP</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="confrim">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="review">Review</string>
    <string name="your_profile_is_under_review_for_the_admin_approval_thnaks_for_your_patience">Your profile is under review for the Admin Approval. Thanks for your patience.</string>
    <string name="resend">Resend</string>
    <string name="error_profileunder_review">301</string>
    <string name="skill_error">This Skill already exist. Please choose another one.</string>
    <string name="enter_skill_error">Please enter a skill</string>
    <string name="mentee_msg">You\'ve completed your profile setup process. Knidly proceed to start getting matches.</string>
    <string name="questions_hint">Please Answer the following questions to get best matches as per your preferences</string>
    <string name="verify_id">Please submit your Photo ID which could include work ID as well as driver’s license or passport.</string>
    <string name="work_in_progress">Work in progress</string>
    <string name="mentors">Mentors</string>
    <string name="mentees">Mentees</string>
    <string name="home">Home</string>
    <string name="notes">Notes</string>
    <string name="chat">Chat</string>
    <string name="events">Events</string>
    <string name="community">Community</string>
    <string name="Profile">Profile</string>
    <string name="boost">Boost</string>
    <string name="skills">Skills</string>
    <string name="handshake">handshake</string>
    <string name="pass">pass</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="bio">Bio</string>
    <string name="out_of_cards">Out of Cards</string>
    <string name="get_unlimited_cards">Get Unlimited Cards</string>
    <string name="get_unlimited_cards_msg">Get unlimited cards with Premium Plan For $10/MO</string>
    <string name="buy_now">Buy Now</string>
    <string name="no_thanks">No Thanks</string>
    <string name="it_s_a_handshake">It\'s a handshake</string>
    <string name="start_chat">Start Chat</string>
    <string name="explore">Explore</string>
    <string name="tips_profile">See your profile and keep it up to date for better matches.</string>
    <string name="tips_home">Go through thousands of mentor or mentee profiles. Swipe right to handshake OR Swipe left to pass and move on to other profile.</string>
    <string name="tips_notes">Create notes and share with other user who will give feedback and ask queries.</string>
    <string name="tips_chat">Chat with mentors or mentees. You can even share photos, videos, files, and notes.</string>
    <string name="tips_events">Explore hundreds of events related to different fields.</string>
    <string name="tips_community">Go through the articles written by fellow mentors. There are thousands of them.</string>
    <string name="tips_boost">Increase your chances by boosting your profile with our best laid out plans.</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="permission_denied_explanation">
        Permission was denied, but is needed for core functionality.
    </string>
    <string name="permission_rationale">
        Location permission is needed for core functionality
    </string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_msg">Are you sure you want to Delete Account?</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="deactivate_account_msg">Are you sure you want to Deactivate Account?</string>
    <string name="unable_location">Unable to fetch location</string>
    <string name="languages">Languages</string>
    <string name="description">Description</string>
    <string name="become_mentor">Become a Mentor</string>
    <string name="become_mentee">Become a Mentee</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="profession">Profession</string>
    <string name="short_bio">Short Bio</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="error_description">Please enter description</string>
    <string name="tell_a_friend">Tell a Friend</string>
    <string name="rate_us">Rate Us</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="notifications">Notifications</string>
    <string name="night_mode">Night Mode</string>
    <string name="auto_night_mode">Auto Night Mode</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confrim_new_password">Confrim New Password</string>
    <string name="password_mismatch">You must enter the same password twice in order to confirm it.</string>
    <string name="messages_received">Messages Received</string>
    <string name="community_posts">Community Posts</string>
    <string name="inspirational_quotes">Inspirational Quotes</string>
    <string name="notes_shared">Notes Shared</string>
    <string name="boosts_reminder">Boosts Reminder</string>
    <string name="update_on_their_follow_profiles">Update on their follow profiles</string>
    <string name="inactivity_reminder">Inactivity Reminder</string>
    <string name="weekend_noti">Weekend Notifications</string>
    <string name="share_and_invite">Share and Invite</string>
    <string name="share_your_idea">Share An Idea</string>
    <string name="subject">Subject</string>
    <string name="enter_your_idea">Enter Your Idea:</string>
    <string name="send">Send</string>
    <string name="share_profile">Share Profile</string>
    <string name="preferences">preferences</string>
    <string name="avatar">avatar</string>
    <string name="get_cards">Get Cards</string>
    <string name="rate_user">Rate User</string>
    <string name="favourite_message">Favourite Messages</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="unmatch">Unmatch</string>
    <string name="block">Block</string>
    <string name="report">Report</string>
    <string name="my_payments">My Payments</string>
    <string name="skip_the_queue">Skip the Queue</string>
</resources>