<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@mipmap/logo" />

        <customviews.ProTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_4sdp"
            android:paddingTop="@dimen/_24sdp"
            android:text="@string/welcome_to"
            android:textAllCaps="true"
            android:textColor="@color/white_color"
            android:textSize="@dimen/_12ssp" />

        <customviews.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/white_color"
            android:textSize="@dimen/_18ssp" />

        <customviews.ProTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLength="100"
            android:paddingLeft="@dimen/_16sdp"
            android:paddingRight="@dimen/_16sdp"
            android:paddingTop="@dimen/_12sdp"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/white_color"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right">

            <customviews.MediumTextView
                android:id="@+id/txtMentee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mentee_ripple"
                android:paddingBottom="@dimen/_12sdp"
                android:paddingLeft="@dimen/_24sdp"
                android:paddingRight="@dimen/_24sdp"
                android:paddingTop="@dimen/_12sdp"
                android:text="@string/mentee"
                android:textAllCaps="true"
                android:textColor="@color/black_color" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="@dimen/_8sdp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <customviews.MediumTextView
                android:id="@+id/txtMentor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/mentee_ripple"
                android:paddingBottom="@dimen/_12sdp"
                android:paddingLeft="@dimen/_24sdp"
                android:paddingRight="@dimen/_24sdp"
                android:paddingTop="@dimen/_12sdp"
                android:text="@string/mentor"
                android:textAllCaps="true"
                android:textColor="@color/black_color" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>