<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llPlans"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/boost_gradient_rectangle"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/_54sdp"
        android:layout_height="@dimen/_54sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_boost_plan" />

    <customviews.MediumTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp"
        android:text="@string/skip_the_queue"
        android:textAllCaps="true"
        android:textColor="@color/white_color"
        android:textSize="@dimen/_14ssp" />

    <customviews.LightTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".8"
        android:gravity="center"
        android:maxLength="80"
        android:paddingBottom="@dimen/_16sdp"
        android:paddingLeft="@dimen/_12sdp"
        android:paddingRight="@dimen/_12sdp"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/white_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvBoostPlans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:layout_centerHorizontal="true"
            android:paddingBottom="@dimen/_16sdp" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/pbPlans"
            style="@style/AVLoadingIndicatorView.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"
            app:indicatorColor="@color/colorPrimary"
            app:indicatorName="BallClipRotatePulseIndicator" />

    </RelativeLayout>

    <customviews.BoldTextView
        android:id="@+id/txtMyPayments"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:background="@drawable/gradient_my_payments"
        android:gravity="center"
        android:text="@string/my_payments"
        android:textAllCaps="true"
        android:textColor="@color/white_color"
        android:textSize="@dimen/_14ssp"
        android:visibility="gone" />

</LinearLayout>